--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Mona Sans";
+  src: url("/Mona-Sans-Regular.woff2");
+  font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "Mona Sans";
+  src: url("/Mona-Sans-Bold.woff2");
+  font-style: bold;
+  font-weight: 500;
+}
+
 html,
 body,
 #__next {
